🔥eh o trem bbadiciona o modais  e fix layout bug

--- a/frontend/pages/Layout/styles.module.css
+++ b/frontend/pages/Layout/styles.module.css
@@ -1,4 +1,5 @@
 .pageContainer {
+  height: 100%;
   font: 1.2rem "Fira Sans", sans-serif;
   background-color: #f5f5f5;
   display: flex;
